general/platform-components/helm/kyverno-policies/tests/certManager/values.yaml
---
bestPractices:
  enabled: true
certManager:
  restrictIssuer:
    dnsZones: [example.com, EXAMPLE.NET]
    issuerRef:
      name: approved-issuer
