general/platform-components/helm/kyverno-policies/tests/certManager/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: cert-manager-test
policies:
  - /tmp/kyverno-certManager.yaml
resources:
  - resources/certificates.yaml
results:
  - policy: cert-manager-limit-dnsnames
    resources:
      - one-dnsname
    kind: Certificate
    result: pass
  - policy: cert-manager-limit-dnsnames
    resources:
      - too-many-dnsnames
    kind: Certificate
    result: fail
  - policy: cert-manager-limit-duration
    resources:
      - exact-long
    kind: Certificate
    result: pass
  - policy: cert-manager-limit-duration
    resources:
      - too-long
    kind: Certificate
    result: fail

  # if duration has no specified field, the test will be skipped
  - policy: cert-manager-limit-duration
    resources:
      - no-specified-duration
    kind: Certificate
    result: skip
  - policy: cert-manager-restrict-issuer
    resources:
      - wrong-issuer
    kind: Certificate
    result: fail
  - policy: cert-manager-restrict-issuer
    resources:
      - corp-issuer
    kind: Certificate
    result: pass
  - policy: cert-manager-restrict-issuer
    resources:
      - subdomain-approved-issuer
    kind: Certificate
    result: pass
  - policy: cert-manager-restrict-issuer
    resources:
      - internal-certificate
    kind: Certificate
    result: skip
  - policy: cert-manager-restrict-issuer
    resources:
      - uppercase-wrong-issuer
      - common-name-wrong-issuer
    kind: Certificate
    result: fail
